# End-2-End-RAG

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: 1.env
src/: loaders.py
tests/: test_env.py
