[project]
name = "end-to-end-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pypdf>=6.11.0",
    "pypdfium2>=5.8.0",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.57.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]
